[tool.poetry]
name = "ticker"
version = "0.1.0"
description = "Micro Streamlit app to see the current value of JMT.LS"
authors = ["Fernando Cordeiro"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
yfinance = "^0.1.55"
streamlit = "^0.74.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"